tests/rosetta/out/Smalltalk/arithmetic-integer-1.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arithmetic-integer-1.st:4: parse error, expected '|' or identifier
