tests/rosetta/out/Smalltalk/arithmetic-integer-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| main a b |
main := [ a := 12.
b := 8.
Transcript show: ((((((((((a asString)) + (' + '))) + ((b asString)))) + (' = '))) + (((a + b) asString)))) printString; cr.
Transcript show: ((((((((((a asString)) + (' - '))) + ((b asString)))) + (' = '))) + (((a - b) asString)))) printString; cr.
Transcript show: ((((((((((a asString)) + (' * '))) + ((b asString)))) + (' = '))) + (((a * b) asString)))) printString; cr.
Transcript show: ((((((((((a asString)) + (' / '))) + ((b asString)))) + (' = '))) + (((a / b) asInteger asString)))) printString; cr.
Transcript show: ((((((((((a asString)) + (' % '))) + ((b asString)))) + (' = '))) + (((a % b) asString)))) printString; cr. ].
main value.
